--- a/index.html
+++ b/index.html
@@ -1,9 +1,53 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
-	<head>
-	</head>
+	<head> <meta charset="utf-8">
+		<link rel="stylesheet" href="style_cv.css">
+	</head> <!--  l'UTF-8, qui permet théoriquement d'encoder toutes les langues, du français au japonais en passant par l'arabe. -->
+	
 	<body>
-		<h1>My First Heading</h1>
-		<p>My first paragraph.</p>
-	</body>
+		<h1>CV</h1>
+		</div>  <!--  comme on peut le voir elle s'arrete ici ; elle est de la forme       <div id="dernieres-nouvelles">...</div>          -->
+		<h2> Mikaël TABAR-NOVUAL <h2>
+		<h3> 90 rue Anatole France Résidence Andromaque <br> Appartement 408 <br> 
+		69100 Villeurbanne <br> Portable: 06 48 48 29 10 <br> mikael.tabar-nouval@etu.univ-lyon1.fr <br> Permis :B  </h3>
+		<p> Master 2 CCI (Compétences Complémentaires en Informatique). Voici le lien de ma  <a href="http://master-info.univ-lyon1.fr/CCI/#1"> formation actuelle </a> <br> 
+		Recherche d'un stage en entreprise (durée de 6 mois minimum à partir du 1er mars 2017)  </p>
+		<div id="F"> 
+		<a href="#F">FORMATION</a>  <!-- voici le lien vers l'ancre que nous avons fait précédement         <a href="#dernieres-nouvelles">Les dernières nouvelles</a>          -->
+		<br><a href="#EP">EXPERIENCE PROFESSIONNELLE</a><br>
+		<a href="#C">COMPETENCES</a><br>
+		<a href="#CS">COMPETENCES SUPPLEMENTAIRES</a><br>
+		<a href="#L">LANGUES</a>
+		<h2 class="formation"> FORMATION </h2>
+		<p>2eme année de Master STIC pour la santé spécialité TECSAN. <br> 
+		1ere année de Master STIC pour la santé spécialité TECSAN. Voici le lien menant à la formation  <a href="http://www.tecsan.univ-montp2.fr"> tecsan </a>.
+		<br>Master de Biologie Intégrative et Physiologie (BIP) spécialité Neurosciences (UPMC). <br> 
+		Licence de biochimie-biologie spécialité Santé (BBS) - mention assez-bien (UAG Guadeloupe) <br> Baccalauréat série S (option physique-chimie). <p>
+		</div>
+		<div id="EP"> 
+		<h2> EXPERIENCE PROFESSIONNELLE </h2>
+		<p><b> Mars 2016-août 2016 : </b> stage sur l’utilisation d’une orthèse pneumatique contrôlé via une ICM dans le cadre de la rééducation de patients suite à un AVC. <br> 
+		<b> Octobre 2015- fevrier 2016 : </b> stage sur la réalisation de lignes et de réseaux par lithographie par interférence laser <br> 
+		<b> Mars 2015- Juillet 2015 :</b> stage sur l’acoustique non linéaire <br> 
+		<b>Décembre 2014- mars 2015 :</b> projet portant sur la mise en place un plan d’action sur l’élaboration d’une interface complète analysant la quantité de mouvements des membres droit et gauche d’un patient suite à un AVC dans le cadre d’une médecine personnalisée.<br>
+		<b>Janvier 2014 - Juin 2014:</b> stage sur les interactions des oligomères Ab avec les récepteurs nicotiniques dans la Maladie d’Alzheimer (mémoire + soutenance).<br>
+		<b>Avril 2012 - Juin 2013: </b> stage sur les cellules de Purkinje (mémoire).<br> <b>Juin 2012 :</b> stage sur le brunissement enzymatique de la banane (mémoire).</p> </div>
+		<div id="C"> 
+		<h2> COMPETENCES </h2>
+		<p> Utilisation du microscope confocal<br> spinning disc<br> Technique de dissociation et de mise en culture de neurones hippocampiques <br>
+		Technique de dislocation et de dissection du cerveau de modèles murins<br> Western-Blot<br> Southern-Blot<br> Immunomarquage <br> Approfondissement des connaissances dans les domaines suivants <br>
+		-capteurs<br> - modélisation<br> - robotique médicale<br> - neuroprothèses<p> </div>
+		<div id="CS"> 
+		<h2> COMPETENCES SUPPLEMENTAIRES</h2>
+		<p> Bureautique (Word, Excel, PowerPoint ) <br> Langage de programmation informatique (R, Matlab-Simulink)<br> Maitrise de logiciel de développement pour la création de designs électroniques industriels (LabVIEW)<br>
+		Systèmes d'information (Merise, UML) <br>Base de données (Oracle/SQL)(en cours)<br> Langages de programmation (Shell, C, Java, ...) (en cours) <br>Systèmes d'exploitation (Unix (MacOS X, GNU/Linux Debian, Ubuntu)) (en cours)<br> 
+		Internet (http, xml) (en cours)<br> Image (VRML) (en cours)<br> Interopérabilité (OWL, Web services) (en cours)<br> Systèmes d'information Collaboratifs (en cours)<br> Introduction au Cloud Computing (IaaS, SaaS, PaaS),<br>
+		Virtualisation, (en cours)<br> Containers (Docker),<br> OpenStack. (en cours)<br> ERP(SAP)<br> (en cours) Modélisation des processus (BPMN) (en cours)<br> Modélisation Géométrique,<br> CFAO,<br> prototypage rapide (en cours)<br> (CATIA, Proengineer, ...) (en cours) 
+		<br>PLM, Ingénierie Simultanée (Standard STEP) (en cours) <br></div>
+		
+		
+	<div id="L"> 	
+<h2> LANGUES </h2>
+<p> Anglais (niveau bac)<br> Espagnol (niveau bac) </div>
+</body>
 </html>
