--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<button style="font-size: 50%;" onclick="afficher('CS');">afficher</button>
 		<button style="font-size: 50%;" onclick="alternatif('CS');">alternatif</button>
 		
-		<!-- <p><b>Abandonnés et solitaires comme ils l'avaient, eux aussi, comme </b> <!--  pour avoir du texte en gras  on est placé ou en réunissant <br>  ; permet de faire un retour à la ligne -->
+		<!-- <p><b>Abandonnés et solitaires comme ils l'avaient, eux aussi, comme </b> < ;  pour avoir du texte en gras  on est placé ou en réunissant <br>  ; permet de faire un retour à la ligne -->
 		<!-- les divers détachements -->
 	<div id="L"> 	
 <h2> LANGUES </h2>
