--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<a href="#CS">COMPETENCES SUPPLEMENTAIRES</a><br>
 		<a href="#L">LANGUES</a>
 		<h2 class="formation"> FORMATION </h2>
-		<p>2eme année de Master STIC pour la santé spécialité TECSAN.   <!--<button style="font-size: 50%;">cacher</button><br>   <!--permet de rajouter un bouton cacher -->
+		<p>2eme année de Master STIC pour la santé spécialité TECSAN.   <!--<button style="font-size: 50%;">cacher</button><br>   ;permet de rajouter un bouton cacher -->
 		1ere année de Master STIC pour la santé spécialité TECSAN. Voici le lien menant à la formation  <a href="http://www.tecsan.univ-montp2.fr"> tecsan </a>.
 		<br>Master de Biologie Intégrative et Physiologie (BIP) spécialité Neurosciences (UPMC). <br> 
 		Licence de biochimie-biologie spécialité Santé (BBS) - mention assez-bien (UAG Guadeloupe) <br> Baccalauréat série S (option physique-chimie). <p>
